addresses issue on ie11 max-width was set to 100% changed to max-width of 1440 case 34217, also update for slideshow that doesn't really do anything

--- a/web/themes/custom/hm-public-theme/static/sass/pages/_timeline.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/pages/_timeline.scss
@@ -5,7 +5,7 @@ body.overflowHidden {
 .timeline_cont {
   display: block;
   margin: auto;
-  max-width: 100%;
+  max-width: 1440px;
 
   .filters__button {
     align-items: center;
